--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,39 @@
-.container {
+* {
+    box-sizing: border-box;    
+}
+
+.flex-column {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+.flex-row {
+    display: flex;
+    justify-content: flex-start    
+}
+
+.margin {
+    margin: 10px;
+}
+
+.full-width {
+    width: 100%;
+}
+
+a:link {
+   text-decoration: none;
+}
+
+.white-text {
+    color:white;
+}
+.primary--background {
+    background-color: #6200EE;
+    color: white;
+}
+
+.inline {
+    display: inline;
+}
+  
