--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@ a:hover {
     font-family: roboto;
 }
 
+.button-primary:hover{
+    background-color: #ddd;
+}
+
 .button-secondary {   
     border: 1px solid rgb(256,0,80);
     color: rgb(256,0,80); 
